infra/k8s/customer-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
  namespace: default
  labels:
    app: customer-deployment
spec:
  selector:
    matchLabels:
      app: customer-deployment
  template:
    metadata:
      labels:
        app: customer-deployment
    spec:
      containers:
        - name: customer-service
          image: canersir/customer-application
          imagePullPolicy: Never
          ports:
            - name: debug-port
              #kubectl port-forward <pod> 8089:8089
              containerPort: 8089
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: default
  labels:
    app: customer-service
spec:
  selector:
    app: customer-deployment
  ports:
    - name: customer-service-port
      protocol: TCP
      port: 80
      targetPort: 8082
#  type: LoadBalancer
#  loadBalancerIP: ""
